2007-03-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: attempt proper texinfo dependencies
	* doc/projects/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/cci/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/dlpi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/mapi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/npi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tci/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tpi/Makefile.am: attempt proper texinfo dependencies
	* doc/specs/tri/Makefile.am: attempt proper texinfo dependencies

2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: try to correct libxnet inclusion
	* acinclude.m4: get rid of extraneous warnings
	* acinclude.m4: correct version numbers
	* strss7.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strss7.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/libxnet.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/strss7.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-21  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: strapped out mtp.c for now